[gd_scene load_steps=16 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/GEBackground.png" type="Texture" id=3]
[ext_resource path="res://GUI/icons/restartbutton.png" type="Texture" id=4]
[ext_resource path="res://GUI/icons/button.png" type="Texture" id=5]
[ext_resource path="res://GUI/icons/pausebutton.png" type="Texture" id=6]
[ext_resource path="res://GUI/icons/continuebutton.png" type="Texture" id=7]
[ext_resource path="res://GUI/icons/enable_sound.png" type="Texture" id=8]
[ext_resource path="res://GUI/icons/enable_music.png" type="Texture" id=9]
[ext_resource path="res://GUI/icons/exitbutton.png" type="Texture" id=10]
[ext_resource path="res://GUI/icons/disable_music.png" type="Texture" id=11]
[ext_resource path="res://GUI/icons/disable_sound.png" type="Texture" id=12]


[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fading"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.509804 ), Color( 0, 0, 0, 0 ) ]
}

[node name="GUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.509804 )
position = Vector2( 491.27, 185.272 )
scale = Vector2( 2.11528, 2.54393 )
texture = ExtResource( 3 )

[node name="ExtraTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AllowedGrabTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 12.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -196.5
margin_right = 198.0
margin_bottom = 196.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 399.0
margin_bottom = 393.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 399.0
margin_bottom = 26.0
text = "State Machine"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 399.0
margin_bottom = 56.0
max_value = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 399.0
margin_bottom = 393.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer"]
margin_left = 40.0
margin_top = 111.0
margin_right = 358.0
margin_bottom = 282.0
text = "Press Z to play
Z / J = Jump
AD / ARROWS = Move
S/DOWN = Let go
SPACE = Pause
GRAB ON LEDGES TO STOP TIME"
align = 1

[node name="PauseMenu" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -189.0
margin_right = 198.0
margin_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_right = 396.0
margin_bottom = 378.0

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
margin_right = 396.0
margin_bottom = 24.0
text = "GAME PAUSED"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
margin_right = 396.0
margin_bottom = 378.0

[node name="VBoxContainer" type="HBoxContainer" parent="PauseMenu/CenterContainer"]
margin_top = 153.0
margin_right = 396.0
margin_bottom = 225.0
custom_constants/separation = 9

[node name="SFX" type="TextureButton" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 72.0
margin_bottom = 72.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )

[node name="Music" type="TextureButton" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_left = 81.0
margin_right = 153.0
margin_bottom = 72.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )

[node name="Continue" type="TextureButton" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_left = 162.0
margin_right = 234.0
margin_bottom = 72.0
texture_normal = ExtResource( 7 )

[node name="Restart" type="TextureButton" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_left = 243.0
margin_right = 315.0
margin_bottom = 72.0
texture_normal = ExtResource( 4 )

[node name="Menu" type="TextureButton" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_left = 324.0
margin_right = 396.0
margin_bottom = 72.0
texture_normal = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fading = SubResource( 3 )

[node name="InputControlsAndroid" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="InputControlsAndroid"]
margin_right = 700.0
margin_bottom = 393.0

[node name="left" type="TouchScreenButton" parent="InputControlsAndroid/CenterContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 89.2808, 306.655 )
rotation = 3.14159
scale = Vector2( 2.8, -2.8 )
normal = ExtResource( 5 )
action = "left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="InputControlsAndroid/CenterContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 121.628, 307.839 )
scale = Vector2( 2.8, 2.8 )
normal = ExtResource( 5 )
action = "right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="InputControlsAndroid/CenterContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 625, 365 )
rotation = -1.5708
scale = Vector2( 3.95075, 3.83938 )
normal = ExtResource( 5 )
action = "jump"
visibility_mode = 1

[node name="restart" type="TouchScreenButton" parent="InputControlsAndroid/CenterContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 109.142, 15 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 4 )
action = "restart"
visibility_mode = 1

[node name="pause" type="TouchScreenButton" parent="InputControlsAndroid/CenterContainer"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 28.506, 15 )
scale = Vector2( 2.4, 2.4 )
normal = ExtResource( 6 )
action = "pause"
visibility_mode = 1
[connection signal="timeout" from="ExtraTimer" to="." method="_on_ExtraTimer_timeout"]
[connection signal="timeout" from="AllowedGrabTimer" to="." method="_on_AllowedGrabTimer_timeout"]
[connection signal="mouse_entered" from="PauseMenu/CenterContainer/VBoxContainer/SFX" to="." method="_on_SFX_mouse_entered"]
[connection signal="toggled" from="PauseMenu/CenterContainer/VBoxContainer/SFX" to="." method="_on_SFX_toggled"]
[connection signal="mouse_entered" from="PauseMenu/CenterContainer/VBoxContainer/Music" to="." method="_on_Music_mouse_entered"]
[connection signal="toggled" from="PauseMenu/CenterContainer/VBoxContainer/Music" to="." method="_on_Button3_toggled"]
[connection signal="mouse_entered" from="PauseMenu/CenterContainer/VBoxContainer/Continue" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="PauseMenu/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="PauseMenu/CenterContainer/VBoxContainer/Menu" to="." method="_on_Menu_mouse_entered"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Menu" to="." method="_on_Button4_pressed"]
